# practice-mcp

./: .gitignore  Download.py  README.md  llm_mcp_server.py  load_data.py  mcp_server.py  pyproject.toml  queries.md  requirements.txt  test_query.py  web_mcp_server.py
templates/: ask.html
